enable prod import map

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -20,7 +20,7 @@
   <main>
     <route default>
       <div class="mc-layout-container">
-<!--        <application name="@moosecodes/mc-news-ui"></application>-->
+        <application name="@moosecodes/mc-news-ui"></application>
         <application name="@moosecodes/mc-primary-nav-ui"></application>
 <!--        <application name="@moosecodes/mc-weather-ui"></application>-->
 <!--        <application name="@moosecodes/mc-home-ui"></application>-->
