--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -21,10 +21,10 @@
     <route default>
       <div class="mc-layout-container">
         <application name="@moosecodes/mc-primary-nav-ui"></application>
+        <application name="@moosecodes/mc-movies-ui"></application>
         <application name="@moosecodes/mc-news-ui"></application>
 <!--        <application name="@moosecodes/mc-weather-ui"></application>-->
 <!--        <application name="@moosecodes/mc-home-ui"></application>-->
-<!--        <application name="@moosecodes/mc-movies-ui"></application>-->
       </div>
 
     </route>
